--- a/about.qmd
+++ b/about.qmd
@@ -7,10 +7,10 @@ editor: visual
 
 This project was developed by **\[Plot Pioneers\]** For [INFO 526 - Data Analysis & Visualization](https://datavizaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
 
--   Athira Thekkemadathil Anilkumar: Graduate student majoring in Data Science.
+-   [Athira Thekkemadathil Anilkumar](https://github.com/AthiraThekkemadathilAnilkumar): Graduate student majoring in Data Science.
 
--   Shalon Walter: Graduate student majoring in Data Science.
+-   [Shalon Walter](https://github.com/shalonwalter): Graduate student majoring in Data Science.
 
--   Priyarsha Vallabhaneni: Graduate student pursuing Data Science major.
+-   [Priyarsha Vallabhaneni](https://github.com/Priyarsha31): Graduate student pursuing Data Science major.
 
--   Chethana Thondebhavi Shantha Kumar: Graduate student majoring in Data Science.
+-   [Chethana Thondebhavi Shantha Kumar](https://github.com/Chethana-16): Graduate student majoring in Data Science.
