Index_about_update

--- a/about.qmd
+++ b/about.qmd
@@ -5,7 +5,7 @@ format: html
 editor: visual
 ---
 
-This project was developed by **\[Plot Pioneers\]** For [INFO 526 - Data Analysis & Visualization](https://datavizaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
+This project was developed by [**Plot Pioneers**](https://github.com/INFO526-DataViz/project-final-Plot-Pioneers) For [INFO 526 - Data Analysis & Visualization](https://datavizaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
 
 -   [Athira Thekkemadathil Anilkumar](https://github.com/AthiraThekkemadathilAnilkumar): Graduate student majoring in Data Science.
 
